# aws-scripts

./: .cspell.json  README.md  Taskfile.yml  package-lock.json  pyproject.toml  requirements.txt
src/: .gitignore  __init__.py  create_ec2_config_example.yml  create_ec2_spot_instance.py
src/internal/: __init__.py
src/til-20231118/: index.md  pyproject.toml
src/til-20231118/src/: create_ec2_config_example.yml  create_ec2_spot_instance.py
